--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 dj-database-url==2.3.0
 Django==4.2
 django-admin-sortable2==2.2.4
 django-tinymce==4.1.0
-dotenv==0.9.9
+environs==14.1.1
+idna==3.10
+marshmallow==3.26.1
+packaging==24.2
 pillow==11.1.0
 python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
-requests==2.32.3
+urllib3==2.3.0
